# QMamehook

./: .gitmodules  CMakeLists.txt  MAMEHOOKER.md  qhookermain.cpp  qhookermain.h  qhookerquickjs.cpp  qhookerquickjs.h  xinput_wrapper.cpp  xinput_wrapper.h
examples/: wws.js
